--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -16,7 +16,7 @@
 \usepackage{graphicx,xcolor,float,afterpage}
 \usepackage{chngcntr,csquotes,helvet,lastpage}
 \usepackage{subcaption,wrapfig,fancyhdr,blindtext}
-\usepackage{titletoc,transparent}
+\usepackage{titletoc,transparent,enumitem}
 %Nouvelles commandes
 \renewcommand{\familydefault}{\sfdefault} %default font
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
