--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -12,11 +12,11 @@
 
 
 %All the packages
-\usepackage{url,ragged2e,textcomp,lmodern}
+\usepackage{url,ragged2e,textcomp,lmodern,color}
 \usepackage{graphicx,xcolor,float,afterpage}
 \usepackage{chngcntr,csquotes,helvet,lastpage}
 \usepackage{subcaption,wrapfig,fancyhdr,blindtext}
-\usepackage{titletoc,transparent,enumitem}
+\usepackage{titletoc,transparent,enumitem,listings}
 %Nouvelles commandes
 \renewcommand{\familydefault}{\sfdefault} %default font
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
@@ -71,8 +71,58 @@
 \@addtoreset{chapter}{part}
 \makeatother  
 
-
+%Coloration syntaxique du C++
+\definecolor{listinggray}{gray}{0.9}
+\definecolor{lbcolor}{rgb}{0.9,0.9,0.9}
+\definecolor{darkgreen}{rgb}{0.0, 0.2, 0.13}
+\lstset{
+backgroundcolor=\color{lbcolor},
+    tabsize=4,    
+%   rulecolor=,
+    language=[GNU]C++,
+        basicstyle=\scriptsize,
+        upquote=true,
+        aboveskip={1.5\baselineskip},
+        columns=fixed,
+        showstringspaces=false,
+        extendedchars=false,
+        breaklines=true,
+        prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
+        frame=single,
+        numbers=left,
+        showtabs=false,
+        showspaces=false,
+        showstringspaces=false,
+        identifierstyle=\ttfamily,
+        keywordstyle=\color[rgb]{0,0,1},
+        commentstyle=\color[rgb]{0.026,0.112,0.095},
+        stringstyle=\color[rgb]{0.627,0.126,0.941},
+        numberstyle=\color[rgb]{0.205, 0.142, 0.73},
+%        \lstdefinestyle{C++}{language=C++,style=numbers}’.
+}
+\lstset{
+    backgroundcolor=\color{lbcolor},
+    tabsize=4,
+  language=C++,
+  captionpos=b,
+  tabsize=3,
+  frame=lines,
+  numbers=left,
+  numberstyle=\tiny,
+  numbersep=5pt,
+  breaklines=true,
+  showstringspaces=false,
+	basicstyle=\footnotesize\ttfamily\bfseries\color{cyan!10!black},
+%  identifierstyle=\color{magenta},
+  keywordstyle=\color[rgb]{0,0,1},
+  commentstyle=\color{darkgreen},
+  stringstyle=\color{red}
+  }
+  
+\input{keywords.tex}
+  
 \begin{document}
+
 
 \begin{titlepage}
 \begin{center}
